--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1">
-					<div class="block">
+					<div class="block" id="port-card-v1">
 						<h4>STMIK MIKROSKIL, MEDAN 2014-2018</h4>
 						<p>Sarjana Komputer</p>
 						<p>
@@ -227,7 +227,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1">
-					<div class="block" style="border: 1px grey solid">
+					<div class="block" id="port-card-v2">
 						<h4>Laravel Workshop</h4>
 						<p><b>BITSMIKRO</b> - Medan, 2018</p>
 					</div>
@@ -235,7 +235,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1">
-					<div class="block" style="border: 1px grey solid">
+					<div class="block" id="port-card-v2">
 						<h4>FORESEC CERTIFIED IN NETWORKING SECURITY (FCNS)</h4>
 						<p><b>FORESEC</b> - Medan, 2017</p>
 					</div>
