--- a/index.html
+++ b/index.html
@@ -2,80 +2,88 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> 
-<html> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html>
+<!--<![endif]-->
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="description" content="Aviato E-Commerce Template">
-  
-  <meta name="author" content="Themefisher.com">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="description" content="Aviato E-Commerce Template">
 
-  <title>Adven Setiawan Gulo</title>
+	<meta name="author" content="Themefisher.com">
 
-  <style type="text/css" href=""></style>
+	<title>Adven Setiawan Gulo</title>
 
-  <!-- Mobile Specific Meta-->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="images/div-logoD.png" />
-  <!-- bootstrap.min css -->
-  <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
-  <!-- Ionic Icon Css -->
-  <link rel="stylesheet" href="plugins/Ionicons/css/ionicons.min.css">
-  <!-- animate.css -->
-  <link rel="stylesheet" href="plugins/animate-css/animate.css">
-  <!-- Magnify Popup -->
-  <link rel="stylesheet" href="plugins/magnific-popup/dist/magnific-popup.css">
-  <!-- Owl Carousel CSS -->
-  <link rel="stylesheet" href="plugins/slick-carousel/slick/slick.css">
-  <link rel="stylesheet" href="plugins/slick-carousel/slick/slick-theme.css">
-  <!-- Awesome-->
-  <link rel="stylesheet" href="css/font-awesome.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="css/style.css">
+	<style type="text/css" href=""></style>
+
+	<!-- Mobile Specific Meta-->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Favicon -->
+	<link rel="shortcut icon" type="image/x-icon" href="images/div-logoD.png" />
+	<!-- bootstrap.min css -->
+	<link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
+	<!-- Ionic Icon Css -->
+	<link rel="stylesheet" href="plugins/Ionicons/css/ionicons.min.css">
+	<!-- animate.css -->
+	<link rel="stylesheet" href="plugins/animate-css/animate.css">
+	<!-- Magnify Popup -->
+	<link rel="stylesheet" href="plugins/magnific-popup/dist/magnific-popup.css">
+	<!-- Owl Carousel CSS -->
+	<link rel="stylesheet" href="plugins/slick-carousel/slick/slick.css">
+	<link rel="stylesheet" href="plugins/slick-carousel/slick/slick-theme.css">
+	<!-- Awesome-->
+	<link rel="stylesheet" href="css/font-awesome.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<!-- Main Stylesheet -->
+	<link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body id="body">
 
-<section class="page-title bg-2">
-  <div class="container">
-		<div class="row">
-			<div class="col-md-2 col-md-offset-5">
-				<div class="block">
-					<img class="img-responsive" style="border-radius: 50%" src="images/company/company-group-pic.jpg">
+	<section class="page-title bg-2">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-2 col-md-offset-5">
+					<div class="block">
+						<img class="img-responsive" style="border-radius: 50%"
+							src="images/company/company-group-pic.jpg">
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="block">
+						<h1>Adven Setiawan Gulo</h1>
+						<p>PHP Developer, Web Developer, Full-Stack Developer</p>
+						<p>
+							<i class="fa fa-phone fa-lg"></i> +6282277517793 <span style="margin-right: 3px;"></span>
+							<i class="fa fa-envelope fa-lg"></i> adven.setiawangulo@gmail.com <span
+								style="margin-right: 3px;"></span>
+							<i class="fa fa-github-square fa-lg"></i> github.com/advengulo <span
+								style="margin-right: 3px;"></span>
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h1>Adven Setiawan Gulo</h1>
-		  <p>PHP Developer, Web Developer, Full-Stack Developer</p>
-		  <p>
-			<i class="fa fa-phone fa-lg"></i> +6282277517793 <span style="margin-right: 3px;"></span>
-			<i class="fa fa-envelope fa-lg"></i> adven.setiawangulo@gmail.com <span style="margin-right: 3px;"></span>
-			<i class="fa fa-github-square fa-lg"></i> github.com/advengulo <span style="margin-right: 3px;"></span>
-			<i class="fa fa-globe fa-lg"></i> divtechno.site
-		  </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+	</section>
 
-<section class="service-about section">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-10 col-md-offset-1">
-				<h2>Tentang Saya</h2>
-				<p class="mt-30">Adven Setiawan Gulo (*1997). Saya adalah seorang programmer yang sedang fokus pada Web Developer. Telah menyelesaikan pendidikan Sarjana Komputer di STMIK Mikroskil Medan tahun 2018. Sudah memulai fundamental pemrograman sejak tahun 2014, dan memulai belajar pemrograman web sejak tahun 2016. Saya senang dengan hal-hal baru, mudah belajar, pekerja keras, bertanggung jawab dan dapat bekerja dalam tim.</p>
-			</div>
-			<div class="col-md-10 col-md-offset-1">
-				<br>
-				<br>
-				<h2>Skills</h2>
+	<section class="service-about section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<h2>Tentang Saya</h2>
+					<p class="mt-30">Adven Setiawan Gulo (*1997). Saya adalah seorang programmer yang sedang fokus pada
+						Web Developer. Telah menyelesaikan pendidikan Sarjana Komputer di STMIK Mikroskil Medan tahun
+						2018. Sudah memulai fundamental pemrograman sejak tahun 2014, dan memulai belajar pemrograman
+						web sejak tahun 2016. Saya senang dengan hal-hal baru, mudah belajar, pekerja keras, bertanggung
+						jawab dan dapat bekerja dalam tim.</p>
+				</div>
+				<div class="col-md-10 col-md-offset-1">
+					<br>
+					<br>
+					<h2>Skills</h2>
 					<p class="badge">PHP</p>
 					<p class="badge">Laravel</p>
 					<p class="badge">MySQL</p>
@@ -83,57 +91,73 @@
 					<p class="badge">Vue.js</p>
 					<p class="badge">HTML</p>
 					<p class="badge">CSS</p>
+					<p class="badge">Bootstrap</p>
+					<p class="badge">Ajax</p>
 					<p class="badge">Json</p>
 					<p class="badge">jQuery</p>
 					<p class="badge">.git</p>
-			</div>
-		</div>
-	</div>
-</section>
-
-<section class="service-list section bg-gray">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-10 col-md-offset-1">
-				<div class="section-title text-center">
-					<h2>Pengalaman Kerja</h2>
-					<hr>
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-10 col-md-offset-1">
-				<div class="block">
-					<h2>PEMERINTAHAN KABUPATEN NIAS</h2>
-					<h4><b>Full-Stack Developer (Tenaga Ahli),</b> Nias | Oktober 2018 - Februari 2020 </h4>
-					<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p> -->
-					<blockquote class="quote-post" style="font-size: 12pt">
-						<ul style="list-style-type:circle">
-							<li>Melakukan Analisa Keperluan Aplikasi Pemerintah Kabupaten Nias</li>
-							<li>Pembuatan dan Pengembangan Aplikasi</li>
-							<li>Bug fixing pada aplikasi yang sudah ada</li>
-							<li>Setup Server dan Deployment</li>
-						</ul>
-					</blockquote>
+	</section>
+
+	<section class="service-list section bg-gray">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="section-title text-center">
+						<h2>Pengalaman Kerja</h2>
+						<hr>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="block">
+						<h2>PEMERINTAHAN KABUPATEN NIAS</h2>
+						<h4><b>Full-Stack Developer (Tenaga Ahli),</b> Nias | Oktober 2018 - Februari 2020 </h4>
+						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, unde.</p> -->
+						<blockquote class="quote-post" style="font-size: 12pt">
+							<ul style="list-style-type:circle">
+								<li>Melakukan Analisa Keperluan Aplikasi Bagian Organisasi, Sekretariat Daerah,
+									Pemerintah Kabupaten Nias</li>
+								<li>Pembuatan dan Pengembangan Aplikasi</li>
+								<li>Pemeliharaan webiste dan Bug fixing pada aplikasi yang sudah ada</li>
+								<li>Setup Server dan Deployment</li>
+							</ul>
+						</blockquote>
+					</div>
+				</div>
+				<div class="col-md-10 col-md-offset-1">
+					<div class="block">
+						<h2>Wadah Foundation</h2>
+						<h4><b>Full-Stack Developer - Freelance,</b> Jakarta | Mei 2020 - Agustus 2020 </h4>
+						<blockquote class="quote-post" style="font-size: 12pt">
+							<ul style="list-style-type:circle">
+								<li>Melakukan analisa kebutuhan dan perancangan sistem</li>
+								<li>Desain UI/UX dan perancangan database</li>
+								<li>Pengkodean Program Backend dan Frontend</li>
+							</ul>
+						</blockquote>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</section>
+	</section>
 
-<section class="portfolio-work">
+	<section class="portfolio-work">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
 					<div class="block">
-							<div class="row">
-								<div class="col-md-10 col-md-offset-1">
-									<div class="section-title text-center">
-										<h2>Project</h2>
-										<hr>
-									</div>
+						<div class="row">
+							<div class="col-md-10 col-md-offset-1">
+								<div class="section-title text-center">
+									<h2>Project</h2>
+									<hr>
 								</div>
 							</div>
+						</div>
 						<div class="portfolio-contant">
 							<ul class="portfolio-contant-active text-center portfolio-popup">
 								<li class="mix Branding" style="margin : 0 0 50px 0">
@@ -142,29 +166,44 @@
 										<div class="item-overly">
 											<div class="position-center">
 												<h4>Rekomendasi Wisata</h4>
-												<p>Aplikasi tentang rekomendasi wisata dan informasi wisata dengan menggunakan Algoritma Neighborhood-based Colaborative Filtering untuk memberikan sebuah rekomendasi Wisata</p>
+												<p>Aplikasi tentang rekomendasi wisata dan informasi wisata dengan
+													menggunakan Algoritma Neighborhood-based Colaborative Filtering
+													untuk memberikan sebuah rekomendasi Wisata</p>
 											</div>
 										</div>
 									</a>
 								</li>
 								<li class="mix Websites" style="margin : 50px 0">
-									<a  href="images/portfolio/work2.jpg">
+									<a href="images/portfolio/work5.png">
+										<img src="images/portfolio/work5.png" alt="">
+										<div class="item-overly">
+											<div class="position-center">
+												<h4>Wadah Data Management</h4>
+												<p>Aplikasi Manajemen data dampingan wadah seluruh Indonesia</p>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li class="mix Websites" style="margin : 50px 0">
+									<a href="images/portfolio/work2.jpg">
 										<img src="images/portfolio/work2.jpg" alt="">
 										<div class="item-overly">
 											<div class="position-center">
 												<h4>Manajemen Kepegawaian</h4>
-												<p>Aplikasi Manajemen kepegawaian, status pegawai, data pegawai, data jabatan, dan Histori kepegawaian.</p>
+												<p>Aplikasi Manajemen kepegawaian, status pegawai, data pegawai, data
+													jabatan, dan Histori kepegawaian.</p>
 											</div>
 										</div>
 									</a>
 								</li>
 								<li class="mix Graphic" style="margin : 50px 0">
-									<a href="images/portfolio/work3.jpg">
-										<img src="images/portfolio/work3.jpg" alt="">
+									<a href="images/portfolio/work3.png">
+										<img src="images/portfolio/work3.png" alt="">
 										<div class="item-overly">
 											<div class="position-center">
 												<h4>Data Jemaat</h4>
-												<p>Aplikasi Web yang menghimpun data jemaat, menampilkan informasi jemaat, membuat kartu jemaat.</p>
+												<p>Aplikasi Web yang menghimpun data jemaat, menampilkan informasi
+													jemaat, membuat kartu jemaat.</p>
 											</div>
 										</div>
 									</a>
@@ -175,7 +214,8 @@
 										<div class="item-overly">
 											<div class="position-center">
 												<h4>Blog Wisata</h4>
-												<p>Aplikasi Web yang dapat dipergunakan untuk menulis dan mereview sebuat wisata</p>
+												<p>Aplikasi Web yang dapat dipergunakan untuk menulis dan mereview
+													sebuat wisata</p>
 											</div>
 										</div>
 									</a>
@@ -187,7 +227,7 @@
 			</div>
 		</div>
 	</section>
-	
+
 	<section class="service-list section bg-gray">
 		<div class="container">
 			<div class="row">
@@ -206,7 +246,7 @@
 						<ul style="list-style-type:circle; padding-left:15px">
 							<li>Peminatan Mobile dan Web</li>
 							<li>IPK (3.26 / 4)</li>
-						</ul> 
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -218,8 +258,16 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h2>Sertifikat</h2>
+						<h2>Sertifikat dan Kursus</h2>
 						<hr>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="block" id="port-card-v2">
+						<h4>Course Laravel Vue.JS – Fullstack Web Development</h4>
+						<p><b>Udemy.com</b> - Udemy Website, 2020</p>
 					</div>
 				</div>
 			</div>
@@ -242,44 +290,46 @@
 		</div>
 	</section>
 
-<!-- footer Start -->
-<footer class="footer">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<p class="copyright">Copyright 2020 &copy; Design & Developed by <a href="/">DivTech</a>. All rights reserved.
-					<br>
-				</p>
+	<!-- footer Start -->
+	<footer class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<p class="copyright">Copyright 2020 &copy; Design & Developed by <a href="/">DivTech</a>. All rights
+						reserved.
+						<br>
+					</p>
+				</div>
 			</div>
 		</div>
-	</div>
-</footer>
+	</footer>
 
-    <!-- 
+	<!-- 
     Essential Scripts
     =====================================-->
-    
-    <!-- <script src="js/jquery.counterup.js"></script> -->
-    <!-- jquery-->
+
+	<!-- <script src="js/jquery.counterup.js"></script> -->
+	<!-- jquery-->
 	<script src="js/jquery-3.4.1.min.js"></script>
-    <!-- Bootstrap 3.1 -->
-	<script src="plugins/bootstrap/js/bootstrap.min.js"></script>	
-    <!-- Owl Carousel -->
-    <script src="plugins/slick-carousel/slick/slick.min.js"></script>
-    <!--  -->
-    <script src="plugins/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
-    <!-- Mixit Up JS -->
-    <script src="plugins/mixitup/dist/mixitup.min.js"></script>
-    <!-- <script src="plugins/count-down/jquery.lwtCountdown-1.0.js"></script> -->
-    <script src="plugins/SyoTimer/build/jquery.syotimer.min.js"></script>
-    <!-- Form Validator -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>  
+	<!-- Bootstrap 3.1 -->
+	<script src="plugins/bootstrap/js/bootstrap.min.js"></script>
+	<!-- Owl Carousel -->
+	<script src="plugins/slick-carousel/slick/slick.min.js"></script>
+	<!--  -->
+	<script src="plugins/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
+	<!-- Mixit Up JS -->
+	<script src="plugins/mixitup/dist/mixitup.min.js"></script>
+	<!-- <script src="plugins/count-down/jquery.lwtCountdown-1.0.js"></script> -->
+	<script src="plugins/SyoTimer/build/jquery.syotimer.min.js"></script>
+	<!-- Form Validator -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
 
-    <script src="js/script.js"></script>
-    
-
+	<script src="js/script.js"></script>
 
 
-  </body>
-  </html>
+
+
+</body>
+
+</html>
