--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
 									</a>
 								</li>
 								<li class="mix Websites" style="margin : 50px 0">
-									<a href="images/portfolio/work5.png">
-										<img src="images/portfolio/work5.png" alt="">
+									<a href="images/portfolio/work5.jpg">
+										<img src="images/portfolio/work5.jpg" alt="">
 										<div class="item-overly">
 											<div class="position-center">
 												<h4>Wadah Data Management</h4>
@@ -197,8 +197,8 @@
 									</a>
 								</li>
 								<li class="mix Graphic" style="margin : 50px 0">
-									<a href="images/portfolio/work3.png">
-										<img src="images/portfolio/work3.png" alt="">
+									<a href="images/portfolio/work3.jpg">
+										<img src="images/portfolio/work3.jpg" alt="">
 										<div class="item-overly">
 											<div class="position-center">
 												<h4>Data Jemaat</h4>
